--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,30 @@
   padding: 0;
   box-sizing: border-box;
 }
+.link {
+  height: 100%;
+  font-family: "Roboto";
+  margin-right: 10;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+}
+.link:hover {
+  color: tomato;
+}
+.link:not(:last-child) {
+  margin-right: 15px;
+}
+.active {
+  height: 100%;
+  font-family: "Roboto";
+  margin-right: 10;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: tomato;
+}
+.active:not(:last-child) {
+  margin-right: 15px;
+}
