--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
-  color: #64748b;
+  color: goldenrod;
 }
 .active:not(:last-child) {
   margin-right: 15px;
